--- a/force-app/main/default/pages/AccountEdit.page
+++ b/force-app/main/default/pages/AccountEdit.page
@@ -1,5 +1,5 @@
 <apex:page standardController="Account">
-    <apex:form>
+    <apex:form >
     <apex:pageBlock title="Edit Account">
         <apex:pageBlockSection columns="1">
             <apex:inputField value="{! Account.Name }"/>
@@ -7,20 +7,18 @@
             <apex:inputField value="{! Account.Industry }"/>
             <apex:inputField value="{! Account.AnnualRevenue }"/>
         </apex:pageBlockSection>
-        <apex:pageBlockButtons>
+        <apex:pageBlockButtons >
             <apex:commandButton action="{! save }" value="Save" />
         </apex:pageBlockButtons>
     </apex:pageBlock>
     <apex:pageBlock title="Contacts">
     <apex:pageBlockTable value="{!Account.contacts}" var="contact">
-        <apex:column>
-            <apex:outputLink
-                value="{! URLFOR($Action.Contact.Edit, contact.Id) }">
+        <apex:column >
+            <apex:outputLink value="{! URLFOR($Action.Contact.Edit, contact.Id) }">
                 Edit
             </apex:outputLink>
             &nbsp;
-            <apex:outputLink
-                value="{! URLFOR($Action.Contact.Delete, contact.Id) }">
+            <apex:outputLink value="{! URLFOR($Action.Contact.Delete, contact.Id) }">
                 Del
             </apex:outputLink>
         </apex:column>
@@ -29,6 +27,6 @@
         <apex:column value="{!contact.Phone}"/>
     </apex:pageBlockTable>
 </apex:pageBlock>
-    <apex:pageMessages/>
+    <apex:pageMessages />
     </apex:form>
 </apex:page>
