visualforce exercise completed

--- a/force-app/main/default/pages/AsignMessage.page
+++ b/force-app/main/default/pages/AsignMessage.page
@@ -1,5 +1,6 @@
 <apex:page controller="AsignMessageController">
     <apex:pageBlock>
+        <apex:pageMessages></apex:pageMessages>
         <apex:form>
             <apex:pageBlockSection>
                 <apex:pageBlockTable value="{! wrappers}" var="w">
